prevent overflow of transition in diagram node

--- a/packages/studio-ui/src/web/views/FlowBuilder/common/style.scss
+++ b/packages/studio-ui/src/web/views/FlowBuilder/common/style.scss
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   color: var(--shark);
+  overflow: hidden;
   max-width: 300px;
 
   .icon {
